--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
@@ -20,9 +20,9 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Future work}
-    \begin{itemize}
-        \item Autoware.Auto などの ROS2 上に構築された自動運転ソフトウェアなど, より複雑で実用的なシナリオに作業を展開する
-        \item DDS 通信の QoS の構成を含む, さまざまな ROS2 設定の作業を拡張する
-    \end{itemize}
-\end{frame}
+% \begin{frame}{Future work}
+%     \begin{itemize}
+%         \item Autoware.Auto などの ROS2 上に構築された自動運転ソフトウェアなど, より複雑で実用的なシナリオに作業を展開する
+%         \item DDS 通信の QoS の構成を含む, さまざまな ROS2 設定の作業を拡張する
+%     \end{itemize}
+% \end{frame}
