--- a/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/main.tex
+++ b/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/main.tex
@@ -30,7 +30,7 @@
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
-    \scriptsize\tableofcontents[hideallsubsections]
+    \tiny\tableofcontents[hideallsubsections]
 \end{frame}
 
 \input{prior_knowledge.tex}
