--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/conclusions.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/conclusions.tex
@@ -12,9 +12,9 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Future work}
-    \begin{itemize}
-        \item パフォーマンスをさらに改善するためのより洗練されたリソース割り当て戦略を調査する
-        \item 任意のデッドラインタスクを処理するためにアプローチを拡張する
-    \end{itemize}
-\end{frame}
+% \begin{frame}{Future work}
+%     \begin{itemize}
+%         \item パフォーマンスをさらに改善するためのより洗練されたリソース割り当て戦略を調査する
+%         \item 任意のデッドラインタスクを処理するためにアプローチを拡張する
+%     \end{itemize}
+% \end{frame}
