--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/main.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/main.tex
@@ -25,7 +25,7 @@
 
 \maketitle
 
-% \summary{3}{0}
+\summary{3}{0}
 \input{abstract.tex}
 
 \begin{frame}{Outline}
@@ -33,25 +33,25 @@
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{prior_knowledge.tex}
-% \input{introduction.tex}
+\input{prior_knowledge.tex}
+\input{introduction.tex}
 \input{system_model.tex}
 \input{overview.tex}
 \input{tasks_executed_on_active_vp.tex}
 \input{tasks_executed_on_passive_vp.tex}
 \input{tasks_executed_on_both.tex}
 \input{resource_allocation.tex}
-% \input{evaluations.tex}
-% \input{related_work.tex}
-% \input{conclusions.tex}
+\input{evaluations.tex}
+\input{related_work.tex}
+\input{conclusions.tex}
 
 \lastpage
 
-% \section*{Reference}
-% \begin{frame}[allowframebreaks]{Reference}
-%     \beamertemplatetextbibitems
-%     \bibliographystyle{unsrt}
-%     \bibliography{\beamerDir/bibtex/master_reference}
-% \end{frame}
+\section*{Reference}
+\begin{frame}[allowframebreaks]{Reference}
+    \beamertemplatetextbibitems
+    \bibliographystyle{unsrt}
+    \bibliography{\beamerDir/bibtex/master_reference}
+\end{frame}
 
 \end{document}
