--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/prior_knowledge.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/prior_knowledge.tex
@@ -1,4 +1,12 @@
 % !TeX root = main.tex
 
-\section{Prior Knowledge}
+\section{PRIOR KNOWLEDGE}
 \label{sec: prior knowledge}
+
+\begin{frame}{前提知識}
+    \begin{itemize}
+        \item \ourl{フェデレートスケジューリング}{https://drive.google.com/file/d/1DsuxdE0okuzZmk0lkOpVEWtfUhXl9OdV/view?usp=share_link}
+        \item \ourl{マルチコアプラットフォームの分類}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2721220872}
+        \item \ourl{デッドラインモデルの分類}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2721611859}
+    \end{itemize}
+\end{frame}
