--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_passive_vp.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_passive_vp.tex
@@ -13,6 +13,7 @@
                   \end{itemize}
             \item パッシブ VP はそのプロセッサでアクティブ VP が実行されていない場合にのみ実行できる
         \end{itemize}
+    \end{definition}
 \end{frame}
 
 \begin{frame}{タスクの実行方法}
