--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/abstract.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/abstract.tex
@@ -5,7 +5,7 @@
     \begin{itemize}
         \item 優先度駆動型スケジューリングによってROSのリアルタイム性能と予測可能性を大幅に改善できることを主張する
         \item 主張を裏付けるために, 優先度駆動型チェーン考慮スケジューリングに関する我々の研究をレビューし, Apex.AI が開発したオープンソースリファレンスシステムを用いた評価を行う
-        \item ROS 2のリアルタイム性能を向上させるために不可欠な以下2つの課題を説明する
+        \item ROS 2のリアルタイム性能を向上させるために不可欠な2つの課題を説明する
         \begin{itemize}
             \item マルチスレッドエグゼキュータ設計
             \item アクセラレータサポート
