--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/conclusion.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/conclusion.tex
@@ -11,10 +11,10 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Future Work}
-    \begin{itemize}
-        \item PiCASをマルチスレッドのエグゼキュータに拡張する
-        \item GPU や FPGA などの共有アクセラレータを使用した ROS 2 のリアルタイムサポート
-        \item cbg エグゼキュータ \cite{yang2020exploring} のサポート
-    \end{itemize}
-\end{frame}
+% \begin{frame}{Future Work}
+%     \begin{itemize}
+%         \item PiCASをマルチスレッドのエグゼキュータに拡張する
+%         \item GPU や FPGA などの共有アクセラレータを使用した ROS 2 のリアルタイムサポート
+%         \item cbg エグゼキュータ \cite{yang2020exploring} のサポート
+%     \end{itemize}
+% \end{frame}
