--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/main.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/main.tex
@@ -34,10 +34,10 @@ Challenges}
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{prior_knowledge.tex}
-% \input{introduction.tex}
+\input{prior_knowledge.tex}
+\input{introduction.tex}
 \input{priority_driven_chain_aware_scheduling.tex}
-% \input{real_time_support_for_multi_threaded_executors.tex}
+\input{real_time_support_for_multi_threaded_executors.tex}
 \input{challenges_with_real_time_gpu_acceleration.tex}
 \input{conclusion.tex}
 
