--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/conclusion_future_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/conclusion_future_work.tex
@@ -10,6 +10,6 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Future work}
-    任意のデッドラインを持つチェーンや, チェーンがいくつかの共通のコールバックを持つDAGグラフモデルのシステムなど, より一般的で複雑な設定に手法を拡張する
-\end{frame}
+% \begin{frame}{Future work}
+%     任意のデッドラインを持つチェーンや, チェーンがいくつかの共通のコールバックを持つDAGグラフモデルのシステムなど, より一般的で複雑な設定に手法を拡張する
+% \end{frame}
