--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
@@ -25,32 +25,32 @@
 
 \maketitle
 
-% \summary{0}{0}
+\summary{1}{0}
 \input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
-    \scriptsize\tableofcontents[hideallsubsections]
+    \tiny\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{prior_knowledge.tex}
-% \input{introduction.tex}
-% \input{background_and_definitions.tex}
-% \input{automatic_latency_management.tex}
-% \input{design_of_ros_llama.tex}
-% \input{practical_considerations.tex}
-% \input{evaluation.tex}
-% \forme{\input{open_problems_and_pragmatic_workarounds.tex}}
-% \input{related_work.tex}
+\input{prior_knowledge.tex}
+\input{introduction.tex}
+\input{background_and_definitions.tex}
+\forme{\input{automatic_latency_management.tex}}
+\input{design_of_ros_llama.tex}
+\input{practical_considerations.tex}
+\input{evaluation.tex}
+\forme{\input{open_problems_and_pragmatic_workarounds.tex}}
+\input{related_work.tex}
 \input{conclusion.tex}
 
 \lastpage
 
-\section*{Reference}
-\begin{frame}[allowframebreaks]{Reference}
-    \beamertemplatetextbibitems
-    \bibliographystyle{unsrt}
-    \bibliography{\beamerDir/bibtex/master_reference}
-\end{frame}
+% \section*{Reference}
+% \begin{frame}[allowframebreaks]{Reference}
+%     \beamertemplatetextbibitems
+%     \bibliographystyle{unsrt}
+%     \bibliography{\beamerDir/bibtex/master_reference}
+% \end{frame}
 
 \end{document}
