--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/introduction.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/introduction.tex
@@ -3,44 +3,44 @@
 \section{INTRODUCTION}
 \label{sec: introduction}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item マルチコアプロセッサは, リアルタイムシステムでますます広く使用され, 高性能と低消費電力に対する急速に高まる要件に対応している
-        \item マルチコアの計算能力を最大限に活用するには, ソフトウェアを並列化する必要がある
-        \item シーケンシャルリアルタイムタスクの既存のスケジューリングおよび分析手法は, 並列ワークロード設定に移行するのが困難である
-        \item マルチコアに並列リアルタイムタスクシステムを効率的に展開するには, 新しいスケジューリングと分析の手法が必要である
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item マルチコアプロセッサは, リアルタイムシステムでますます広く使用され, 高性能と低消費電力に対する急速に高まる要件に対応している
+%         \item マルチコアの計算能力を最大限に活用するには, ソフトウェアを並列化する必要がある
+%         \item シーケンシャルリアルタイムタスクの既存のスケジューリングおよび分析手法は, 並列ワークロード設定に移行するのが困難である
+%         \item マルチコアに並列リアルタイムタスクシステムを効率的に展開するには, 新しいスケジューリングと分析の手法が必要である
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{フェデレートスケジューリング}
-    \begin{itemize}
-        \item フェデレートスケジューリング [1] はリアルタイム性能と高い柔軟性を両立する有望なアプローチ
-        \item フェデレートスケジューリングでは, デッドラインを守るために並列実行が必要な密度1以上の「重い」タスクは専用のプロセッサのサブセット上で排他的に実行され, 密度1以下の「軽い」タスクは, 他のプロセッサ上で従来の逐次リアルタイムタスクスケジューリングアルゴリズムを用いてスケジュールされる
-        \item フェデレートスケジューリングは, 定量的に最も優れた最悪性能保証 (キャパシティ拡張境界の観点) を提供する
-        \item フェデレートスケジューリングは, タスクグラフのクリティカルパス長や総ワークロードといった抽象的な情報のみを必要とする分析技術であるため, 条件付きDAGタスク[2]やOpenMPタスクモデル[3]などに拡張可能
-    \end{itemize}
-\end{frame}
+% \begin{frame}{フェデレートスケジューリング}
+%     \begin{itemize}
+%         \item フェデレートスケジューリング [1] はリアルタイム性能と高い柔軟性を両立する有望なアプローチ
+%         \item フェデレートスケジューリングでは, デッドラインを守るために並列実行が必要な密度1以上の「重い」タスクは専用のプロセッサのサブセット上で排他的に実行され, 密度1以下の「軽い」タスクは, 他のプロセッサ上で従来の逐次リアルタイムタスクスケジューリングアルゴリズムを用いてスケジュールされる
+%         \item フェデレートスケジューリングは, 定量的に最も優れた最悪性能保証 (キャパシティ拡張境界の観点) を提供する
+%         \item フェデレートスケジューリングは, タスクグラフのクリティカルパス長や総ワークロードといった抽象的な情報のみを必要とする分析技術であるため, 条件付きDAGタスク[2]やOpenMPタスクモデル[3]などに拡張可能
+%     \end{itemize}
+% \end{frame}
 
 \begin{frame}{フェデレートスケジューリングの問題点}
     \begin{itemize}
-        \item 各タスクは独自のプロセッサで排他的に実行され, これらのプロセッサの未使用の処理能力は他のタスクで使用できないため, フェデレートスケジューリングはかなりのリソースの浪費に悩まされている
-        \item この問題に対処する既存研究はあるが [4, 5], どちらもフェデレートスケジューリングの処理能力浪費の問題を限られた範囲で解決するだけである
+        \item 各タスクは独自のプロセッサで排他的に実行され, これらのプロセッサの未使用の処理能力は他のタスクで使用できないため, フェデレートスケジューリングはかなりのリソースの浪費が起きる
+        \item この問題に対処する既存研究はあるが [4, 5], どちらも限定的な解決にとどまっている
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item グローバルスケジューリング [6]-[8], 分割スケジューリング [9], [10], および分解ベースのスケジューリング [11], [12] など, タスクが互いにプロセッサを共有できるようにする他のタイプのスケジューリングアルゴリズムがある
-        \item しかし, 分析的に保証されたスケジューラビリティは, 実際にはフェデレートスケジューリングより劣っている
-        \item これは主に, フェデレートスケジューリングでの排他的なプロセッサの所有権により, 各タスクのスケジューリングと分析が大幅に簡素化され, 他のタイプのスケジューリングアルゴリズムよりも優れたスケジューラビリティが分析的に保証されるため
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item グローバルスケジューリング [6]-[8], 分割スケジューリング [9], [10], および分解ベースのスケジューリング [11], [12] など, タスクが互いにプロセッサを共有できるようにする他のタイプのスケジューリングアルゴリズムがある
+%         \item しかし, 分析的に保証されたスケジューラビリティは, 実際にはフェデレートスケジューリングより劣っている
+%         \item これは主に, フェデレートスケジューリングでの排他的なプロセッサの所有権により, 各タスクのスケジューリングと分析が大幅に簡素化され, 他のタイプのスケジューリングアルゴリズムよりも優れたスケジューラビリティが分析的に保証されるため
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{}
+\begin{frame}{提案}
     \begin{itemize}
-        \item 本論文では, タスクが互いにプロセッサを効率的に共有できるようにする仮想フェデレートスケジューリングアプローチを紹介する
+        \item タスクが互いにプロセッサを効率的に共有できるようにする仮想フェデレートスケジューリングアプローチを提案
         \item 主なアイデアは, 物理プロセッサ上に仮想プロセッサを構築し, 各タスクを専用の仮想プロセッサセットで排他的に実行すること
         \item 物理プロセッサが仮想プロセッサによって共有されるため, タスクは互いにプロセッサを効果的に共有し, システム全体のリソース利用率が向上する
-        \item 一方, 各タスクは独自の仮想プロセッサセットで排他的に実行されるため, フェデレートスケジューリングの優れた分析可能性は, 仮想プロセッサを使用した新しいアプローチに持ち込むことができる
+        \item 一方, 各タスクは独自の仮想プロセッサセットで排他的に実行されるため, フェデレートスケジューリングの優れた分析可能性は保たれる
     \end{itemize}
 \end{frame}
