--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/prior_knowledge.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/prior_knowledge.tex
@@ -1,4 +1,19 @@
 % !TeX root = main.tex
 
-\section{Prior Knowledge}
+\section{PRIOR KNOWLEDGE}
 \label{sec: prior knowledge}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item \ourl{ROS}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603071}
+        \item \ourl{ROS2}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683635767}
+        \item \ourl{リアルタイム性}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683668573}
+        \item \ourl{エンドツーエンドレイテンシ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2684616950}
+        \item \ourl{コールバック}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603231/Callback}
+        \item \ourl{ノード}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2697103530}
+        \item \ourl{コールバックグループ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683374043}
+        \item \ourl{エグゼキュータ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683373911/Executor}
+        \item \ourl{エグゼキュータ固有のスケジューリング動作}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2698314224}
+        \item \ourl{PiCAS提案論文}{https://drive.google.com/file/d/1bcw-duEbQjA7tHqi7ChAAc_27A49zqcw/view?usp=share_link}
+    \end{itemize}
+\end{frame}
