--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/real_time_support_for_multi_threaded_executors.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/real_time_support_for_multi_threaded_executors.tex
@@ -3,42 +3,43 @@
 \section{REAL-TIME SUPPORT FOR MULTI-THREADED EXECUTORS}
 \label{sec: real-time support for multi-threaded executors}
 
-\begin{frame}{}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        ROS 2 マルチスレッドエグゼキュータで発生する課題と, 進行中の作業を説明する
+    \end{itembox}
+\end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item ROS 2 はマルチスレッドのエグゼキュータを提供するが, 以前の研究 $[5,6,8]$ ではシングルスレッドのエグゼキュータのみが考慮されていた
+%         \item 一般に, マルチスレッド化により, 複数のプロセッサを効果的に利用できるようになり, システムの同時実行性とスループットが向上する
+%         \item リアルタイムマルチスレッドの利点は, 自動運転車のコンテキストで実証されている [10]
+%         \item また, 図 3 に示すように, ROS 2 のデフォルトのマルチスレッドエグゼキュータは, シングルスレッドのエグゼキュータよりもレイテンシパフォーマンスが優れていることも確認した
+%         \item ROS 2 マルチスレッドエグゼキュータのこのような利点にもかかわらず,  $\operatorname{ROS} 2$ のマルチスレッドエグゼキュータのタイミング動作を分析および改善するための先行研究はない
+%         \item したがって, このセクションでは,
+%     \end{itemize}
+% \end{frame}
+
+\begin{frame}{マルチスレッドエグゼキュータの分析の困難性}
+    マルチスレッドのエグゼキュータでの処理チェーンの分析は以下の理由で困難
     \begin{itemize}
-        \item ROS 2 はマルチスレッドのエグゼキュータを提供するが, 以前の研究 $[5,6,8]$ ではシングルスレッドのエグゼキュータのみが考慮されていた
-        \item 一般に, マルチスレッド化により, 複数のプロセッサを効果的に利用できるようになり, システムの同時実行性とスループットが向上する
-        \item リアルタイムマルチスレッドの利点は, 自動運転車のコンテキストで実証されている [10]
-        \item また, 図 3 に示すように, ROS 2 のデフォルトのマルチスレッドエグゼキュータは, シングルスレッドのエグゼキュータよりもレイテンシパフォーマンスが優れていることも確認した
-        \item ROS 2 マルチスレッドエグゼキュータのこのような利点にもかかわらず,  $\operatorname{ROS} 2$ のマルチスレッドエグゼキュータのタイミング動作を分析および改善するための先行研究はない
-        \item したがって, このセクションでは, ROS 2 マルチスレッドエグゼキュータで発生する課題について説明する
+        \item 複数のスレッドにまたがるランタイムコールバックの分散
+        \item スレッドの非同期ポーリングポイント
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{進行中の作業}
     \begin{itemize}
-        \item 厳しいタイミング要件を持つシステムでマルチスレッドエグゼキュータを利用するために必要な最初のステップは, シングルスレッドエグゼキュータに対して人々が行ったように, そのタイミング動作を正式に分析することである
-        \item しかし, シングルスレッドのエグゼキュータとは異なり, マルチスレッドのエグゼキュータでの処理チェーンの分析は, 複数のスレッドにまたがるランタイムコールバックの分散と, スレッドの非同期ポーリングポイントのため, より困難である
-        \item このような課題により, 既存の ROS 2 分析手法をマルチスレッドエグゼキュータに直接拡張することが困難になる
-        \item 分析の目的で, 現在, シングルスレッドとマルチスレッドのエグゼキュータを, それぞれパーティションスケジューラとグローバルスケジューラとしてモデル化している
+        \item マルチスレッドエグゼキュータを, グローバルスケジューラとしてモデル化し, 従来のノンプリエンプティブグローバルタスクスケジューリング手法を ROS 2 環境に拡張する
+        \item PiCAS をマルチスレッドエグゼキュータに拡張して, 優先度に基づくスケジューリングを可能にし, エンドツーエンドレイテンシと予測可能性を向上させる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{コールバックグループに関する可能性}
+    コールバックグループに関する以下のような問題に関する研究は, ROS 2 でのより効率的なスケジューリングアプローチに繋がる
     \begin{itemize}
-        \item このモデリングを通じて, コールバックの依存関係, チェーン, ポーリングポイント, レディセット管理などのセマンティックの違いを考慮して, [11] などの従来のノンプリエンプティブグローバルタスクスケジューリング手法を ROS 2 環境に拡張することを目指している
-        \item また, PiCAS をマルチスレッドエグゼキュータに拡張して, 優先度に基づくスケジューリングを可能にし, エンドツーエンドレイテンシと予測可能性を向上させる作業も行っている
-        \item 完了すると, マルチスレッドエグゼキュータと複数のシングルスレッドエグゼキュータでの優先度駆動型コールバックスケジューリングのパフォーマンスを比較できる
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item ROS 2 は, コールバックグループと呼ばれるマルチスレッドエグゼキュータ向けの興味深い機能を提供する
-        \item これは, コールバックの同時実行規則を適用するために使用できる
-        \item コールバックグループには, 相互排他的と再入可能の 2 種類がある
-        \item コールバックグループのタイプに基づいて, システムのタイミング動作とチェーンのエンドツーエンドレイテンシは異なる
-        \item これにより, 新しい問題が発生し, 次のことをさらに探求するようになった: i) これらのコールバックグループが ROS 2 エグゼキュータのタイミング動作にどのように影響するか, ii) 各タイプのチェーンのエンドツーエンドレイテンシを分析的にモデル化する方法, および iii) これらがどのようにリアルタイムパフォーマンスを向上させるように構成できる
-        \item これらの問題に関する研究は, ROS 2 でのより効率的なスケジューリングアプローチにつながると考えている
-        \item 例えば, コールバックをグループに割り当ててから, コールバックグループをスケジューリングする
+        \item コールバックグループが ROS 2 エグゼキュータのタイミング動作にどのように影響するか
+        \item 各タイプのチェーンのエンドツーエンドレイテンシを分析的にモデル化する方法
+        \item リアルタイムパフォーマンスを向上させるようなコールバックグループ構成
     \end{itemize}
 \end{frame}
